@@ -1,6 +1,7 @@
 Revision history for experimental
 
 {{$NEXT}}
+          Added basic tests
 
 0.001     2013-05-26 15:18:43 Europe/Amsterdam
           First release
